<resources>
    <string name="app_name">Hello World</string>
    <string name="button1">constraint_layout</string>
    <string name="button2">login</string>
    <string name="button3">pick_contact</string>
    <string name="android_practice">Android practice</string>
    <string name="button4">fragment</string>
    <string name="button10">button 10</string>
    <string name="button9">compose_tweet</string>
    <string name="button8">DataStore</string>
    <string name="button7">SharedPreference</string>
    <string name="button6">counter</string>
    <string name="button5">RecyclerView</string>

    <string name="button11">button 11</string>
    <string name="button12">button 12</string>
    <string name="button13">button 13</string>
    <string name="button14">button 14</string>
    <string name="button20">button 20</string>
    <string name="button19">button 19</string>
    <string name="button18">button 18</string>
    <string name="button17">button 17</string>
    <string name="button16">button 16</string>
    <string name="button15">button 15</string>
    <string name="newHello">Hello!</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="img">img</string>
    <string name="fill">fill</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_passowrd">Forgot passowrd?</string>
    <string name="email">Sign up with E-mail</string>
    <string name="or_connect_with">or connect with</string>
    <string name="java">Java</string>
    <string name="android">Android</string>
    <string name="androidText">Android is a mobile operating system based on a modified version of the Linux kernel and other\nopen source software, designed primarily for touchscreen mobile devices such as smartphones\nand tablets.</string>
    <string name="javaText">Java is a High Level, class-based, object-oriented programming language that is designed to have\nas few implementation dependencies as possible.</string>
    <string name="bottomBar">到底了</string>
    <string name="hintTitle">提示信息：</string>
    <string name="hintContent">点击\"知道了\"不再提示</string>
    <string name="gotIt">知道了</string>
    <string name="welcomeBack">欢迎您回来</string>
</resources>