<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fillImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="113.1dp"
        android:src="@drawable/fill_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/fill" />
    <EditText
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:height="40dp"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@+id/fillImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/username"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:width="250dp"
        android:height="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="password"
        />
    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        android:layout_marginTop="22.5dp"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_passowrd"
        android:layout_marginTop="22.5dp"
        android:layout_marginStart="37.5dp"
        app:layout_constraintStart_toEndOf="@+id/checkbox"
        app:layout_constraintTop_toBottomOf="@+id/password"
        style="?android:attr/buttonBarButtonStyle"/>
    <Button
        android:id="@+id/loginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:width="250dp"
        android:layout_marginTop="22.5dp"
        app:layout_constraintStart_toStartOf="@+id/checkbox"
        app:layout_constraintTop_toBottomOf="@+id/checkbox"
        />
    <TextView
        android:id="@+id/connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_connect_with"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="26.5dp"
        />
    <ImageView
        android:id="@+id/fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fb"
        app:layout_constraintStart_toStartOf="@+id/checkbox"
        app:layout_constraintTop_toBottomOf="@+id/connect"
        android:layout_marginTop="29.5dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/tw"
        app:layout_constraintEnd_toEndOf="@+id/loginBtn"
        app:layout_constraintTop_toBottomOf="@+id/connect"
        android:layout_marginTop="29.5dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="85.5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fb"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
